gcc/testsuite/gcc.target/aarch64/sve/acle/general-c/type_redef_6.c
/* { dg-do compile } */

typedef __SVBool_t svbool_t; /* { dg-message "note: previous declaration of 'svbool_t'" } */

#pragma GCC aarch64 "arm_sve.h" /* { dg-error {redefinition of typedef 'svbool_t'} } */

